feat: Add shareable photo card after check-in for social media
- Create ShareableCard component with social-first design
- Machine photo, name, location, categories
- User info and JidouNavi branding
- Retro pixel aesthetic matching app theme
- Capture card as image using react-native-view-shot
- Share via native share sheet with expo-sharing
- Shows after check-in success (after badge popup if any)
- Add translations for share feature

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -186,5 +186,12 @@
   "languageSelector": {
     "title": "Select Language",
     "changeLanguage": "Change Language"
+  },
+  "share": {
+    "visited": "VISITED",
+    "shareToSocial": "Share to Social",
+    "maybeLater": "Maybe later",
+    "notAvailable": "Sharing is not available on this device",
+    "dialogTitle": "Share your vending machine discovery!"
   }
 }
