The Discover screen now includes:
  1. Bookmark button on each machine card (right side)
  2. Visual state - filled bookmark = saved, outline = not saved
  3. Optimistic updates - instant UI feedback
  4. Loading state - spinner while saving
  5. Login prompt if not authenticated
  6. Error handling with rollback on failure

  The saved machines sync with the Profile's My Saved section - bookmark in Discover, see it in
  Profile.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,4 +1,9 @@
 {
+  "tabs": {
+    "map": "Map",
+    "discover": "Discover",
+    "profile": "Profile"
+  },
   "common": {
     "cancel": "Cancel",
     "ok": "OK",
@@ -195,5 +200,13 @@
     "maybeLater": "Maybe later",
     "notAvailable": "Sharing is not available on this device",
     "dialogTitle": "Share your vending machine discovery!"
+  },
+  "discover": {
+    "title": "Discover",
+    "popular": "Popular",
+    "recentlyAdded": "Recently Added",
+    "visits": "visits",
+    "noPopular": "No popular machines yet",
+    "noRecent": "No recent machines yet"
   }
 }
