style(machine-detail): apply copilot suggestions for accessibility and code structure
- Moved SCREEN_WIDTH constant to module scope after imports.
- Replaced deprecated StatusBar.setHidden with declarative hidden prop.
- Switched to photoUrl as key in full-screen modal for consistency.
- Added translated accessibility labels for close button and full-screen images.
- Added missing translation keys for accessibility and full-screen viewing in English and Spanish.

--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -121,6 +121,7 @@
     "visited": "Visitada",
     "photoCarousel": "Carrusel de fotos",
     "photoLabel": "Foto de máquina {{current}} de {{total}}",
+    "viewPhotoFullScreen": "Ver foto en pantalla completa",
     "loginRequired": "Inicio de sesión requerido",
     "loginToSave": "Por favor inicia sesión para guardar máquinas.",
     "loginToCheckIn": "Por favor inicia sesión para registrar tu visita.",
@@ -188,5 +189,8 @@
   "languageSelector": {
     "title": "Seleccionar Idioma",
     "changeLanguage": "Cambiar Idioma"
+  },
+  "accessibility": {
+    "closeFullScreenViewer": "Cerrar visor de pantalla completa"
   }
 }
