--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -121,6 +121,7 @@
     "visited": "Visited",
     "photoCarousel": "Photo carousel",
     "photoLabel": "Machine photo {{current}} of {{total}}",
+    "viewPhotoFullScreen": "View photo in full screen",
     "loginRequired": "Login Required",
     "loginToSave": "Please log in to save machines.",
     "loginToCheckIn": "Please log in to check in.",
@@ -195,5 +196,8 @@
     "maybeLater": "Maybe later",
     "notAvailable": "Sharing is not available on this device",
     "dialogTitle": "Share your vending machine discovery!"
+  },
+  "accessibility": {
+    "closeFullScreenViewer": "Close full screen viewer"
   }
 }
