minor font tweaks for two line wrapping

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -93,7 +93,7 @@
     "settings": "Settings",
     "language": "Language",
     "supportUs": "Support Us",
-    "supportDescription": "JidouNavi is built by vending machine lovers who personally visited and photographed these machines. Your support helps us keep the app running and add new features.",
+    "supportDescription": "JidouNavi is built by two passionate developers who personally visited and photographed many of these machines. Your support helps us keep the app alive and continue building new features for the community.",
     "supportButton": "Buy Us a Coffee",
     "supportLinkError": "Could not open the support link. Please try again later."
   },
