--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -93,7 +93,7 @@
     "settings": "Configuración",
     "language": "Idioma",
     "supportUs": "Apóyanos",
-    "supportDescription": "JidouNavi está creado por amantes de las máquinas expendedoras que visitaron y fotografiaron personalmente estas máquinas. Tu apoyo nos ayuda a mantener la app y añadir nuevas funciones.",
+    "supportDescription": "JidouNavi fue creado por dos desarrolladores apasionados que recorrieron y fotografiaron personalmente muchas de estas máquinas. Tu apoyo nos ayuda a mantener la app activa y a seguir creando nuevas funciones para la comunidad.",
     "supportButton": "Invítanos un Café",
     "supportLinkError": "No se pudo abrir el enlace. Por favor intenta más tarde."
   },
