fix(pr-review): apply copilot suggestions for photo upload and dev mode
- Refactored machine photo upload to use storage helper.
- Hardened coordinate validation in add-machine.
- Improved FAB positioning in map screen.
- Enhanced role security trigger to cover INSERTs.
- Added accessibility labels and error handling.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -136,6 +136,9 @@
     "loginToCheckIn": "Please log in to check in.",
     "saveError": "Failed to save machine.",
     "unsaveError": "Failed to unsave machine.",
+    "addPhoto": "Add Photo",
+    "photoAdded": "Photo added successfully!",
+    "uploadError": "Failed to upload photo.",
     "checkIn": {
       "title": "Check In",
       "question": "Is this vending machine still here?",
