feat(profile): allow users to change profile picture
- Created 'avatars' storage bucket with RLS policies via migration.
- Added uploadAvatar helper.
- Implemented avatar editing UI in Profile screen.
- Handled image selection, upload, and profile update.
- Added translation keys.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -64,6 +64,8 @@
     "visits": "Visits",
     "badges": "Badges",
     "mySaved": "My Saved",
+    "avatarUpdated": "Profile picture updated!",
+    "avatarUpdateError": "Failed to update profile picture.",
     "noSavedMachines": "No saved machines yet",
     "savedMachinesHint": "Tap the bookmark icon on any machine to save it for later!",
     "noBadgesYet": "No badges yet",
