feat: improve saved machines cards with larger photos and better hierarchy
- Increase photo size to 70px with red border for existing images
- Add location icon prefix to address
- Reduce address font size to 12px with lighter color
- Replace icon-only unsave button with styled button
- Increase card shadow for more depth
- Add unsave translation key (en/es)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -12,6 +12,7 @@
     "loading": "Loading...",
     "save": "Save",
     "saved": "Saved",
+    "unsave": "Unsave",
     "remove": "Remove",
     "back": "Back",
     "user": "User"
