--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -12,6 +12,7 @@
     "loading": "Cargando...",
     "save": "Guardar",
     "saved": "Guardado",
+    "unsave": "Desguardar",
     "remove": "Eliminar",
     "back": "Volver",
     "user": "Usuario"
