fix: avatar cache busting and settings modal display issues
- Add avatarTimestamp state to properly bust avatar cache on upload
- Avatar now updates immediately after upload without page refresh
- Add 'accountSettings' translation key for en/es
- Fix settings modal not showing content (container height/flex issue)
- Add flexDirection column and explicit height to modal container
- Add contentContainerStyle for proper ScrollView padding

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -61,6 +61,7 @@
   },
   "profile": {
     "title": "Profile",
+    "accountSettings": "Account Settings",
     "machinesAdded": "Machines Added",
     "visits": "Visits",
     "badges": "Badges",
