feat: add stats progress cards with milestone tracking
- Create StatProgressCard component with progress bars
- Show next badge milestone for each stat type
- Replace horizontal stats row with vertical progress cards
- Add translation keys for new stat labels

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -63,6 +63,10 @@
     "title": "Profile",
     "accountSettings": "Account Settings",
     "machinesAdded": "Machines Added",
+    "machinesDiscovered": "Machines Discovered",
+    "machinesVisited": "Machines Visited",
+    "badgesUnlocked": "Badges Unlocked",
+    "nextMilestone": "Next",
     "visits": "Visits",
     "badges": "Badges",
     "mySaved": "My Saved",
