--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -63,6 +63,10 @@
     "title": "Perfil",
     "accountSettings": "Configuración de Cuenta",
     "machinesAdded": "Máquinas Añadidas",
+    "machinesDiscovered": "Máquinas Descubiertas",
+    "machinesVisited": "Máquinas Visitadas",
+    "badgesUnlocked": "Insignias Desbloqueadas",
+    "nextMilestone": "Siguiente",
     "visits": "Visitas",
     "badges": "Insignias",
     "mySaved": "Mis Guardados",
