feat: add badge showcase with locked badges and rarity filters
- Create BadgeShowcase component with rarity filter tabs (All/Common/Rare/Epic)
- Create LockedBadgeCard showing greyed-out badges with progress bars
- Create BadgeRequirementModal showing unlock requirements and progress
- Replace simple badge scroll with full showcase including locked badges
- Add translation keys for badge filters and progress UI

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -76,6 +76,15 @@
     "savedMachinesHint": "Tap the bookmark icon on any machine to save it for later!",
     "noBadgesYet": "No badges yet",
     "badgesHint": "Visit machines and add new ones to earn badges!",
+    "lockedBadges": "Locked Badges",
+    "unlockedBadges": "Unlocked",
+    "progress": "Progress",
+    "keepExploring": "Keep exploring to unlock this badge!",
+    "gotIt": "Got it!",
+    "filterAll": "All",
+    "filterCommon": "Common",
+    "filterRare": "Rare",
+    "filterEpic": "Epic",
     "legal": "Legal",
     "privacyPolicy": "Privacy Policy",
     "termsOfService": "Terms of Service",
