--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -76,6 +76,15 @@
     "savedMachinesHint": "¡Toca el icono de marcador en cualquier máquina para guardarla!",
     "noBadgesYet": "Aún no hay insignias",
     "badgesHint": "¡Visita máquinas y añade nuevas para ganar insignias!",
+    "lockedBadges": "Insignias Bloqueadas",
+    "unlockedBadges": "Desbloqueadas",
+    "progress": "Progreso",
+    "keepExploring": "¡Sigue explorando para desbloquear esta insignia!",
+    "gotIt": "¡Entendido!",
+    "filterAll": "Todas",
+    "filterCommon": "Común",
+    "filterRare": "Rara",
+    "filterEpic": "Épica",
     "legal": "Legal",
     "privacyPolicy": "Política de Privacidad",
     "termsOfService": "Términos de Servicio",
