feat: rename saved machines to quest log with visited checkmarks
- Rename "My Saved" section to "Quest Log" for game immersion
- Fetch visited status for saved machines
- Show green checkmark icon for machines user has visited
- Update empty state text for quest log theme
- Add savedNameRow style for name + checkmark layout

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -70,6 +70,9 @@
     "visits": "Visits",
     "badges": "Badges",
     "mySaved": "My Saved",
+    "questLog": "Quest Log",
+    "noQuestLog": "No quests yet",
+    "questLogHint": "Save machines from the map to add them to your quest log!",
     "avatarUpdated": "Profile picture updated!",
     "avatarUpdateError": "Failed to update profile picture.",
     "noSavedMachines": "No saved machines yet",
