--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -70,6 +70,9 @@
     "visits": "Visitas",
     "badges": "Insignias",
     "mySaved": "Mis Guardados",
+    "questLog": "Registro de Misiones",
+    "noQuestLog": "Aún no hay misiones",
+    "questLogHint": "¡Guarda máquinas del mapa para añadirlas a tu registro de misiones!",
     "avatarUpdated": "¡Foto de perfil actualizada!",
     "avatarUpdateError": "Error al actualizar la foto de perfil.",
     "noSavedMachines": "Aún no hay máquinas guardadas",
