feat: comprehensive UI polish and verification system improvements
P0 Critical Fixes:
- Add error handling to map screen with retry banner
- Add error handling to search API with visual feedback
- Add password show/hide toggle to login and signup screens
- Fix background color consistency (#FDF3E7) across all screens

P1 High Priority:
- Add photo upload validation (5MB limit, MIME types)
- Display verification count and last verified date in machine detail
- Create design system constants file (src/theme/constants.ts)

P2 Polish:
- Add image loading skeletons for photo carousel
- Fix photo pagination dots visibility with dark background
- Fix "All" category chip to use brand color (#FF4B4B)
- Add freshness indicators (green/yellow/red) based on verification age
- Add re-verification prompt for machines not verified in 90+ days

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -116,7 +116,10 @@
     "searchAccessibilityLabel": "Search for vending machines",
     "searchAccessibilityHint": "Enter machine name, description, or address",
     "noMachinesFound": "No machines found",
-    "clearSearch": "Clear search"
+    "clearSearch": "Clear search",
+    "fetchError": "Couldn't load machines",
+    "retry": "Retry",
+    "searchError": "Search failed. Please try again."
   },
   "categories": {
     "all": "All",
@@ -135,6 +138,9 @@
     "noPhoto": "No photo",
     "visits": "{{count}} visits",
     "visit": "{{count}} visit",
+    "verifications": "{{count}} verified",
+    "lastVerified": "Last verified {{date}}",
+    "neverVerified": "Not yet verified",
     "active": "Active",
     "unverified": "Unverified",
     "away": "{{distance}} away",
@@ -153,6 +159,8 @@
     "addPhoto": "Add Photo",
     "photoAdded": "Photo added successfully!",
     "uploadError": "Failed to upload photo.",
+    "stalePrompt": "This machine hasn't been verified recently. Can you help confirm it's still here?",
+    "verifyNow": "Verify Now",
     "checkIn": {
       "title": "Check In",
       "question": "Is this vending machine still here?",
