chore: update contact email to jidou.navi@gmail.com and add waitlist table
Update all contact/support email references from personal email to official
project email. Add waitlist table migration for landing page email collection
with RLS policies (public inserts, private reads).

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -94,7 +94,7 @@
       "title": "Account Deleted",
       "message": "Your account has been permanently deleted."
     },
-    "deleteAccountError": "Failed to delete account. Please contact support at leandrotrabucco@gmail.com",
+    "deleteAccountError": "Failed to delete account. Please contact support at jidou.navi@gmail.com",
     "logoutConfirm": {
       "title": "Log Out",
       "message": "Are you sure you want to log out?"
