--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -94,7 +94,7 @@
       "title": "Cuenta Eliminada",
       "message": "Tu cuenta ha sido eliminada permanentemente."
     },
-    "deleteAccountError": "Error al eliminar la cuenta. Por favor contacta a soporte en leandrotrabucco@gmail.com",
+    "deleteAccountError": "Error al eliminar la cuenta. Por favor contacta a soporte en jidou.navi@gmail.com",
     "logoutConfirm": {
       "title": "Cerrar Sesión",
       "message": "¿Estás seguro de que deseas cerrar sesión?"
