Updated privacy policy and terms of service to use i18n translation

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -268,5 +268,80 @@
     "visits": "visits",
     "noPopular": "No popular machines yet",
     "noRecent": "No recent machines yet"
+  },
+  "legal": {
+    "back": "← Back",
+    "goBack": "Go back",
+    "lastUpdated": "Last updated: {{date}}",
+    "updateDate": "February 2026",
+    "privacy": {
+      "title": "Privacy Policy",
+      "section1Title": "1. Introduction",
+      "section1Text": "Welcome to JidouNavi. We respect your privacy and are committed to protecting your personal data. This privacy policy explains how we collect, use, and safeguard your information when you use our app.",
+      "section2Title": "2. Information We Collect",
+      "section2Intro": "We collect the following types of information:",
+      "section2Bullet1": "Account information (email, username)",
+      "section2Bullet2": "Location data (when you add or visit vending machines)",
+      "section2Bullet3": "Photos you upload of vending machines",
+      "section2Bullet4": "Usage data (visits, contributions, badges earned)",
+      "section3Title": "3. How We Use Your Information",
+      "section3Intro": "We use your information to:",
+      "section3Bullet1": "Provide and improve our services",
+      "section3Bullet2": "Show nearby vending machines on the map",
+      "section3Bullet3": "Track your contributions and award badges",
+      "section3Bullet4": "Communicate with you about your account",
+      "section4Title": "4. Location Data",
+      "section4Text": "We collect location data only when you explicitly use location-based features (finding nearby machines, adding a new machine, or checking in). You can control location permissions through your device settings.",
+      "section5Title": "5. Data Sharing",
+      "section5Text": "We do not sell your personal data. Your contributions (machine locations, photos) are shared publicly to help other users discover vending machines. Your email and account details remain private.",
+      "section6Title": "6. Data Security",
+      "section6Text": "We use industry-standard security measures to protect your data, including encryption in transit and at rest. Your data is stored securely using Supabase infrastructure.",
+      "section7Title": "7. Your Rights",
+      "section7Intro": "You have the right to:",
+      "section7Bullet1": "Access your personal data",
+      "section7Bullet2": "Request correction of your data",
+      "section7Bullet3": "Request deletion of your account",
+      "section7Bullet4": "Withdraw consent for location tracking",
+      "section8Title": "8. Contact Us",
+      "section8Text": "If you have questions about this privacy policy or your data, please contact us at: jidou.navi@gmail.com"
+    },
+    "terms": {
+      "title": "Terms of Service",
+      "section1Title": "1. Acceptance of Terms",
+      "section1Text": "By using JidouNavi, you agree to these Terms of Service. If you do not agree to these terms, please do not use the app.",
+      "section2Title": "2. Description of Service",
+      "section2Text": "JidouNavi is a crowdsourced platform for discovering and sharing vending machine locations. Users can add new machines, check in at locations, earn badges, and explore nearby machines.",
+      "section3Title": "3. User Accounts",
+      "section3Intro": "You must create an account to use most features. You are responsible for:",
+      "section3Bullet1": "Maintaining the security of your account",
+      "section3Bullet2": "All activities that occur under your account",
+      "section3Bullet3": "Providing accurate information",
+      "section4Title": "4. User Content",
+      "section4Intro": "When you submit content (photos, locations, descriptions), you:",
+      "section4Bullet1": "Grant us a license to use and display this content",
+      "section4Bullet2": "Confirm you have the right to share this content",
+      "section4Bullet3": "Agree not to submit inappropriate or illegal content",
+      "section5Title": "5. Acceptable Use",
+      "section5Intro": "You agree not to:",
+      "section5Bullet1": "Submit false or misleading information",
+      "section5Bullet2": "Harass other users or engage in harmful behavior",
+      "section5Bullet3": "Attempt to manipulate the badge or leaderboard system",
+      "section5Bullet4": "Use the app for any illegal purpose",
+      "section5Bullet5": "Interfere with the proper functioning of the app",
+      "section6Title": "6. Location Accuracy",
+      "section6Text": "Vending machine locations are user-contributed and may not always be accurate. We do not guarantee the accuracy of any location data. Machines may be removed, relocated, or out of service.",
+      "section7Title": "7. Intellectual Property",
+      "section7Text": "The JidouNavi app, including its design, features, and branding, is owned by us. User-submitted content remains the property of users but is licensed to us for display within the app.",
+      "section8Title": "8. Termination",
+      "section8Text": "We may suspend or terminate your account if you violate these terms. You may delete your account at any time through the app settings.",
+      "section9Title": "9. Disclaimer of Warranties",
+      "section9Text": "The app is provided \"as is\" without warranties of any kind. We do not guarantee uninterrupted service or that the app will be error-free.",
+      "section10Title": "10. Limitation of Liability",
+      "section10Text": "To the maximum extent permitted by law, we are not liable for any indirect, incidental, or consequential damages arising from your use of the app.",
+      "section11Title": "11. Changes to Terms",
+      "section11Text": "We may update these terms from time to time. Continued use of the app after changes constitutes acceptance of the new terms.",
+      "section12Title": "12. Contact",
+      "section12Text": "For questions about these terms, contact us at: jidou.navi@gmail.com"
+    }
   }
 }
