--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -268,5 +268,80 @@
     "visits": "visitas",
     "noPopular": "Aún no hay máquinas populares",
     "noRecent": "Aún no hay máquinas recientes"
+  },
+  "legal": {
+    "back": "← Volver",
+    "goBack": "Volver",
+    "lastUpdated": "Última actualización: {{date}}",
+    "updateDate": "Febrero 2026",
+    "privacy": {
+      "title": "Política de Privacidad",
+      "section1Title": "1. Introducción",
+      "section1Text": "Bienvenido a JidouNavi. Respetamos tu privacidad y estamos comprometidos a proteger tus datos personales. Esta política de privacidad explica cómo recopilamos, usamos y protegemos tu información cuando usas nuestra aplicación.",
+      "section2Title": "2. Información que Recopilamos",
+      "section2Intro": "Recopilamos los siguientes tipos de información:",
+      "section2Bullet1": "Información de cuenta (correo electrónico, nombre de usuario)",
+      "section2Bullet2": "Datos de ubicación (cuando agregas o visitas máquinas expendedoras)",
+      "section2Bullet3": "Fotos que subes de máquinas expendedoras",
+      "section2Bullet4": "Datos de uso (visitas, contribuciones, insignias ganadas)",
+      "section3Title": "3. Cómo Usamos tu Información",
+      "section3Intro": "Usamos tu información para:",
+      "section3Bullet1": "Proporcionar y mejorar nuestros servicios",
+      "section3Bullet2": "Mostrar máquinas expendedoras cercanas en el mapa",
+      "section3Bullet3": "Rastrear tus contribuciones y otorgar insignias",
+      "section3Bullet4": "Comunicarnos contigo sobre tu cuenta",
+      "section4Title": "4. Datos de Ubicación",
+      "section4Text": "Recopilamos datos de ubicación solo cuando usas explícitamente funciones basadas en ubicación (encontrar máquinas cercanas, agregar una nueva máquina o registrar visita). Puedes controlar los permisos de ubicación a través de la configuración de tu dispositivo.",
+      "section5Title": "5. Compartir Datos",
+      "section5Text": "No vendemos tus datos personales. Tus contribuciones (ubicaciones de máquinas, fotos) se comparten públicamente para ayudar a otros usuarios a descubrir máquinas expendedoras. Tu correo electrónico y detalles de cuenta permanecen privados.",
+      "section6Title": "6. Seguridad de Datos",
+      "section6Text": "Usamos medidas de seguridad estándar de la industria para proteger tus datos, incluyendo encriptación en tránsito y en reposo. Tus datos se almacenan de forma segura usando la infraestructura de Supabase.",
+      "section7Title": "7. Tus Derechos",
+      "section7Intro": "Tienes derecho a:",
+      "section7Bullet1": "Acceder a tus datos personales",
+      "section7Bullet2": "Solicitar corrección de tus datos",
+      "section7Bullet3": "Solicitar eliminación de tu cuenta",
+      "section7Bullet4": "Retirar el consentimiento para el seguimiento de ubicación",
+      "section8Title": "8. Contáctanos",
+      "section8Text": "Si tienes preguntas sobre esta política de privacidad o tus datos, contáctanos en: jidou.navi@gmail.com"
+    },
+    "terms": {
+      "title": "Términos de Servicio",
+      "section1Title": "1. Aceptación de Términos",
+      "section1Text": "Al usar JidouNavi, aceptas estos Términos de Servicio. Si no estás de acuerdo con estos términos, por favor no uses la aplicación.",
+      "section2Title": "2. Descripción del Servicio",
+      "section2Text": "JidouNavi es una plataforma colaborativa para descubrir y compartir ubicaciones de máquinas expendedoras. Los usuarios pueden agregar nuevas máquinas, registrar visitas, ganar insignias y explorar máquinas cercanas.",
+      "section3Title": "3. Cuentas de Usuario",
+      "section3Intro": "Debes crear una cuenta para usar la mayoría de las funciones. Eres responsable de:",
+      "section3Bullet1": "Mantener la seguridad de tu cuenta",
+      "section3Bullet2": "Todas las actividades que ocurran bajo tu cuenta",
+      "section3Bullet3": "Proporcionar información precisa",
+      "section4Title": "4. Contenido del Usuario",
+      "section4Intro": "Cuando envías contenido (fotos, ubicaciones, descripciones):",
+      "section4Bullet1": "Nos otorgas una licencia para usar y mostrar este contenido",
+      "section4Bullet2": "Confirmas que tienes derecho a compartir este contenido",
+      "section4Bullet3": "Aceptas no enviar contenido inapropiado o ilegal",
+      "section5Title": "5. Uso Aceptable",
+      "section5Intro": "Aceptas no:",
+      "section5Bullet1": "Enviar información falsa o engañosa",
+      "section5Bullet2": "Acosar a otros usuarios o participar en comportamientos dañinos",
+      "section5Bullet3": "Intentar manipular el sistema de insignias o clasificación",
+      "section5Bullet4": "Usar la aplicación para cualquier propósito ilegal",
+      "section5Bullet5": "Interferir con el funcionamiento adecuado de la aplicación",
+      "section6Title": "6. Precisión de Ubicación",
+      "section6Text": "Las ubicaciones de máquinas expendedoras son contribuidas por usuarios y pueden no ser siempre precisas. No garantizamos la exactitud de ningún dato de ubicación. Las máquinas pueden ser removidas, reubicadas o estar fuera de servicio.",
+      "section7Title": "7. Propiedad Intelectual",
+      "section7Text": "La aplicación JidouNavi, incluyendo su diseño, características y marca, es de nuestra propiedad. El contenido enviado por usuarios permanece como propiedad de los usuarios pero está licenciado a nosotros para su visualización dentro de la aplicación.",
+      "section8Title": "8. Terminación",
+      "section8Text": "Podemos suspender o terminar tu cuenta si violas estos términos. Puedes eliminar tu cuenta en cualquier momento a través de la configuración de la aplicación.",
+      "section9Title": "9. Descargo de Garantías",
+      "section9Text": "La aplicación se proporciona \"tal cual\" sin garantías de ningún tipo. No garantizamos servicio ininterrumpido ni que la aplicación estará libre de errores.",
+      "section10Title": "10. Limitación de Responsabilidad",
+      "section10Text": "En la máxima medida permitida por la ley, no somos responsables por daños indirectos, incidentales o consecuentes que surjan de tu uso de la aplicación.",
+      "section11Title": "11. Cambios a los Términos",
+      "section11Text": "Podemos actualizar estos términos de vez en cuando. El uso continuado de la aplicación después de los cambios constituye aceptación de los nuevos términos.",
+      "section12Title": "12. Contacto",
+      "section12Text": "Para preguntas sobre estos términos, contáctanos en: jidou.navi@gmail.com"
+    }
   }
 }
